# sys-scope

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  package.json  styled.d.ts  vite.config.ts
.github/actions/setup-env/: action.yml
.github/workflows/: tauri-release.yml  unit-test.yml
__tests__/: frontend-utils.test.ts
src/: App.tsx  index.css  main.tsx  styled.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  display.rs  lib.rs  main.rs  metrics.rs  models.rs  state.rs  ui.rs  utils.rs
src-tauri/src/commands/: settings.rs
src-tauri/src/generators/: macos.rs
src-tauri/src/helpers/: fs.rs  mod.rs  process.rs  shortcut.rs
src-tauri/src/macos/: Package.resolved  Package.swift  README.md  mod.rs
src-tauri/src/macos/.swiftpm/xcode/package.xcworkspace/xcuserdata/samuelwahome.xcuserdatad/: UserInterfaceState.xcuserstate
src-tauri/src/macos/.swiftpm/xcode/xcuserdata/samuelwahome.xcuserdatad/xcschemes/: xcschememanagement.plist
src-tauri/src/macos/src-swift/: BatteryInfo.swift  CPUInfo.swift  DiskInfo.swift  Helpers.swift  MemoryInfo.swift  OSLogger.swift  TitleBar.swift
src-tauri/src/ui/: tray.rs  window.rs
src/components/battery/: BatteryComponent.tsx  styles.ts
src/components/column/: ColumnComponent.tsx
src/components/cpu/: CpuComponent.tsx  styles.ts
src/components/disk/: DiskComponent.tsx  styles.ts
src/components/footer/: FooterComponent.tsx  styles.ts
src/components/memory/: MemoryComponent.tsx  styles.ts
src/components/network/: NetworkComponent.tsx  styles.ts
src/components/section/: SectionComponent.tsx
src/components/settings/: SettingsDialog.tsx  styles.ts
src/containers/system/: SystemMonitor.tsx  styles.ts
src/hooks/: useEffectAsync.tsx  useServerEventsContext.tsx  useServerEventsEnumerableStore.tsx  useServerEventsStore.tsx  useTheme.ts
src/lib/: autostart.ts  types.ts
src/pages/about/: about.html  about.ts  styles.css
src/providers/: ServerEventsProvider.tsx  ThemeContext.ts  ThemeProvider.tsx  index.tsx
src/styles/: globals.ts  themes.ts
src/utils/: FrontendUtils.ts  SectionDetails.ts  TauriUtils.ts  dom.ts  theme.ts
