[package]
name = "app"
version = "2.0.1"
description = "A feature-packed system monitor to view resources as disk, battery, CPU and memory usage"
authors = ["you"]
license = "MIT"
repository = "https://github.com/Samuel-dot-cloud/sys-scope"
default-run = "app"
edition = "2021"
rust-version = "1.69.0"

# [profile.release]
# debug = true
# opt-level = 0
# split-debuginfo = "unpacked"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
swift-rs = { version = "1.0.6", features = ["build"] }

[dev-dependencies]
serial_test = "3.0.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "global-shortcut", "shell-open", "dialog-message", "macos-private-api", "system-tray", "updater", "test"] }
sysinfo = "0.30.13"
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version = "1.35.1", features = ["full"] }
kv = { version = "0.24.0", features = ["json-value"] }
window-vibrancy = "0.4.3"
window-shadows = "0.2.2"
starship-battery = "0.8.2"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
swift-rs = "1.0.6"
anyhow = "1.0.79"
tauri-plugin-theme = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
