[package]
name = "app"
version = "2.0.1"
description = "A feature-packed system monitor to view resources as disk, battery, CPU and memory usage"
authors = ["Samuel Wahome <hey@samwahome.com>"]
license = "MIT"
repository = "https://github.com/Samuel-dot-cloud/sys-scope"
default-run = "app"
edition = "2021"
rust-version = "1.77.2"

# [profile.release]
# debug = true
# opt-level = 0
# split-debuginfo = "unpacked"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
swift-rs = { version = "1.0.7", features = ["build"] }

[dev-dependencies]
serial_test = "3.0.0"

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.2", features = [ "macos-private-api", "test", "tray-icon" ] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
sysinfo = "0.30.13"
log = "0.4.29"
pretty_env_logger = "0.5.0"
tokio = { version = "1.50.0", features = ["full"] }
swift-rs = "1.0.7"
anyhow = "1.0.79"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
